objects/blng__AccountBalanceSnapshot__c.object
<CustomObject>
    <fields>
        <fullName>blng__AccountBalance__c</fullName>
        <formula>blng__TotalInvoiceAmount__c - blng__UnappliedPaymentAmount__c - blng__UnappliedCreditNoteAmount__c + blng__UnappliedDebitNoteAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Balance Snapshots</relationshipLabel>
        <relationshipName>AccountBalanceSnapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BalanceSnapshotRunCreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Balance Snapshot Run (Created By)</label>
        <referenceTo>blng__BalanceSnapShotRun__c</referenceTo>
        <relationshipLabel>Account Balance Snapshot</relationshipLabel>
        <relationshipName>BalanceSnapshotRunInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceAgingBucket10__c</fullName>
        <label>Invoice Aging Bucket 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceAgingBucket1__c</fullName>
        <label>Invoice Aging Bucket 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceAgingBucket2__c</fullName>
        <label>Invoice Aging Bucket 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Invoices__c</fullName>
        <label>Invoices</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__SnapshotDate__c</fullName>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__TotalInvoiceAmount__c</fullName>
        <formula>blng__InvoiceAgingBucket1__c + blng__InvoiceAgingBucket10__c + blng__InvoiceAgingBucket2__c + blng__InvoiceAgingBucket3__c + blng__InvoiceAgingBucket4__c + blng__InvoiceAgingBucket5__c + blng__InvoiceAgingBucket6__c + blng__InvoiceAgingBucket7__c + blng__InvoiceAgingBucket8__c + blng__InvoiceAgingBucket9__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__UnappliedCreditNoteAmount__c</fullName>
        <label>Unapplied Credit Note Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__UnappliedCreditNotes__c</fullName>
        <label>Unapplied Credit Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__UnappliedDebitNoteAmount__c</fullName>
        <label>Unapplied DebitNote Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__UnappliedDebitNotes__c</fullName>
        <label>Unapplied DebitNotes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__UnappliedPaymentAmount__c</fullName>
        <label>Unapplied Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__UnappliedPayments__c</fullName>
        <label>Unapplied Payments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account Balance Snapshot</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__AccountBalance__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>blng__InvoiceAgingBucket1__c</columns>
        <columns>blng__InvoiceAgingBucket2__c</columns>
        <columns>blng__InvoiceAgingBucket3__c</columns>
        <columns>blng__InvoiceAgingBucket4__c</columns>
        <columns>blng__InvoiceAgingBucket5__c</columns>
        <columns>blng__SnapshotDate__c</columns>
        <columns>blng__TotalInvoiceAmount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Balance Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Balance Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>